added function to load and transform gap data

--- a/scripts/IS_agent/N01_agent_setup.ipynb
+++ b/scripts/IS_agent/N01_agent_setup.ipynb
@@ -334,10 +334,15 @@
     "    \"\"\"\n",
     "    Facts about gaps to other cars\n",
     "    \"\"\"\n",
-    "    gap_ahead = Field(float, mandatory= False)          # Time to car ahead (seconds)\n",
-    "    gap_behind = Field(float, mandatory= False)         # Time to car behind (seconds)\n",
-    "    gap_ahead_trend = Field(float, mandatory= False)    # Change in gap ahead over last laps\n",
-    "    gap_behind_trend = Field(float, mandatory= False)   # Change in gap behind over last laps"
+    "    driver_number = Field(int, mandatory=True)          # Driver this gap data is for\n",
+    "    gap_ahead = Field(float, mandatory=False)           # Time to car ahead (seconds)\n",
+    "    gap_behind = Field(float, mandatory=False)          # Time to car behind (seconds)\n",
+    "    gap_ahead_trend = Field(float, mandatory=False)     # Change in gap ahead over last laps\n",
+    "    gap_behind_trend = Field(float, mandatory=False)    # Change in gap behind over last laps\n",
+    "    car_ahead = Field(int, mandatory=False)             # Driver number of car ahead\n",
+    "    car_behind = Field(int, mandatory=False)            # Driver number of car behind\n",
+    "    in_undercut_window = Field(bool, mandatory=False)   # Whether in undercut window (gap < 1.5s)\n",
+    "    in_drs_window = Field(bool, mandatory=False)        # Whether in DRS window (gap < 1.0s)"
    ]
   },
   {
@@ -876,6 +881,167 @@
     "    \n",
     "    # Step 2: Transform the analysis into a fact\n",
     "    return transform_radio_analysis(json_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.4 Transforming gap data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform_gap_data(gaps_df, driver_number):\n",
+    "    \"\"\"\n",
+    "    Transform gap data from FastF1 into facts for the rule engine.\n",
+    "    \n",
+    "    Args:\n",
+    "        gaps_df (DataFrame): DataFrame with gap data\n",
+    "        driver_number (int): The driver number to extract data for\n",
+    "        \n",
+    "    Returns:\n",
+    "        GapFact: Fact with gap information\n",
+    "    \"\"\"\n",
+    "    # Filter data for the specific driver\n",
+    "    driver_data = gaps_df[gaps_df['DriverNumber'] == driver_number]\n",
+    "    \n",
+    "    if driver_data.empty:\n",
+    "        print(f\"Warning: No gap data found for driver {driver_number}\")\n",
+    "        return None\n",
+    "    \n",
+    "    # Get the most recent gap data\n",
+    "    latest_data = driver_data.iloc[-1]\n",
+    "    \n",
+    "    # Create the gap fact with available information\n",
+    "    gap_fact = GapFact(\n",
+    "        driver_number=int(driver_number),\n",
+    "        # Gap to car ahead (if available)\n",
+    "        gap_ahead=float(latest_data.get('GapToCarAhead', 0.0)),\n",
+    "        # Gap to car behind (if available)\n",
+    "        gap_behind=float(latest_data.get('GapToCarBehind', 0.0)),\n",
+    "        # Car numbers (if available)\n",
+    "        car_ahead=int(latest_data.get('CarAheadNumber', 0)) if not pd.isna(latest_data.get('CarAheadNumber', 0)) else None,\n",
+    "        car_behind=int(latest_data.get('CarBehindNumber', 0)) if not pd.isna(latest_data.get('CarBehindNumber', 0)) else None,\n",
+    "        # Trend data (if available)\n",
+    "        gap_ahead_trend=float(latest_data.get('GapToCarAheadTrend', 0.0)),\n",
+    "        gap_behind_trend=float(latest_data.get('GapToCarBehindTrend', 0.0)),\n",
+    "        # Undercut and DRS windows\n",
+    "        in_undercut_window=bool(latest_data.get('InUndercutWindow', False)),\n",
+    "        in_drs_window=bool(latest_data.get('InDRSWindow', False))\n",
+    "    )\n",
+    "    \n",
+    "    return gap_fact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_gap_data(race_session, window_size=3):\n",
+    "    \"\"\"\n",
+    "    Load and process gap data from FastF1 session.\n",
+    "    \n",
+    "    Args:\n",
+    "        race_session: FastF1 session object with loaded data\n",
+    "        window_size (int): Number of laps to calculate trend over\n",
+    "        \n",
+    "    Returns:\n",
+    "        DataFrame: Processed gap data with relevant metrics\n",
+    "    \"\"\"\n",
+    "    # Make sure we have the necessary data\n",
+    "    if not hasattr(race_session, 'laps'):\n",
+    "        print(\"Error: Session does not have lap data loaded\")\n",
+    "        return pd.DataFrame()\n",
+    "    \n",
+    "    # Get all laps data\n",
+    "    laps_df = race_session.laps\n",
+    "    \n",
+    "    # Initialize our result dataframe\n",
+    "    gaps_data = []\n",
+    "    \n",
+    "    # Get unique drivers\n",
+    "    drivers = laps_df['DriverNumber'].unique()\n",
+    "    \n",
+    "    # Process each lap for each driver\n",
+    "    for lap_number in sorted(laps_df['LapNumber'].unique()):\n",
+    "        # Get this lap's data for all drivers\n",
+    "        lap_data = laps_df[laps_df['LapNumber'] == lap_number]\n",
+    "        \n",
+    "        # Sort by position to find cars ahead and behind\n",
+    "        lap_data = lap_data.sort_values('Position')\n",
+    "        \n",
+    "        # For each driver, calculate gaps to cars ahead and behind\n",
+    "        for i, driver_lap in lap_data.iterrows():\n",
+    "            driver_number = driver_lap['DriverNumber']\n",
+    "            position = driver_lap['Position']\n",
+    "            \n",
+    "            # Find car ahead\n",
+    "            car_ahead_data = lap_data[lap_data['Position'] == position - 1]\n",
+    "            car_behind_data = lap_data[lap_data['Position'] == position + 1]\n",
+    "            \n",
+    "            # Calculate gaps\n",
+    "            gap_to_car_ahead = None\n",
+    "            car_ahead_number = None\n",
+    "            if not car_ahead_data.empty:\n",
+    "                car_ahead_number = car_ahead_data.iloc[0]['DriverNumber']\n",
+    "                # Calculate gap using time difference\n",
+    "                # This is simplified - in real code you might need more complex calculation\n",
+    "                gap_to_car_ahead = driver_lap['LapTime'] - car_ahead_data.iloc[0]['LapTime']\n",
+    "            \n",
+    "            gap_to_car_behind = None\n",
+    "            car_behind_number = None\n",
+    "            if not car_behind_data.empty:\n",
+    "                car_behind_number = car_behind_data.iloc[0]['DriverNumber']\n",
+    "                # Similar calculation for car behind\n",
+    "                gap_to_car_behind = car_behind_data.iloc[0]['LapTime'] - driver_lap['LapTime']\n",
+    "            \n",
+    "            # Store this data point\n",
+    "            gaps_data.append({\n",
+    "                'DriverNumber': driver_number,\n",
+    "                'LapNumber': lap_number,\n",
+    "                'Position': position,\n",
+    "                'CarAheadNumber': car_ahead_number,\n",
+    "                'CarBehindNumber': car_behind_number,\n",
+    "                'GapToCarAhead': gap_to_car_ahead,\n",
+    "                'GapToCarBehind': gap_to_car_behind,\n",
+    "                'InUndercutWindow': gap_to_car_ahead is not None and gap_to_car_ahead < 1.5,\n",
+    "                'InDRSWindow': gap_to_car_ahead is not None and gap_to_car_ahead < 1.0\n",
+    "            })\n",
+    "    \n",
+    "    # Convert to DataFrame\n",
+    "    gaps_df = pd.DataFrame(gaps_data)\n",
+    "    \n",
+    "    # Calculate trends over the specified window\n",
+    "    if not gaps_df.empty:\n",
+    "        # Group by driver\n",
+    "        for driver in drivers:\n",
+    "            driver_data = gaps_df[gaps_df['DriverNumber'] == driver].sort_values('LapNumber')\n",
+    "            \n",
+    "            # Calculate rolling difference for gap ahead\n",
+    "            if 'GapToCarAhead' in driver_data.columns:\n",
+    "                gaps_df.loc[driver_data.index, 'GapToCarAheadTrend'] = \\\n",
+    "                    driver_data['GapToCarAhead'].diff(periods=window_size)\n",
+    "            \n",
+    "            # Calculate rolling difference for gap behind\n",
+    "            if 'GapToCarBehind' in driver_data.columns:\n",
+    "                gaps_df.loc[driver_data.index, 'GapToCarBehindTrend'] = \\\n",
+    "                    driver_data['GapToCarBehind'].diff(periods=window_size)\n",
+    "    \n",
+    "    return gaps_df"
    ]
   },
   {
