--- a/scripts/gap_calculation.ipynb
+++ b/scripts/gap_calculation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        ")"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,21 +762,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run with your video\n",
-    "# def main():\n",
-    "#     video_path = \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\"\n",
-    "#     video_path = \"../f1-strategy/data/videos/spain_2023_race.mp4.f399.mp4\"\n",
+    "#Run with your video\n",
+    "def main():\n",
+    "    # video_path = \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\"\n",
+    "    # video_path = \"../f1-strategy/data/videos/spain_2023_race.mp4.f399.mp4\"\n",
     "    \n",
-    "#     video_path = \"../f1-strategy/data/videos/belgium_gp.f399.mp4\"\n",
-    "#     output_path = \"../f1-strategy/data/videos/gap_detection_output.mp4\"\n",
-    "#     process_video_with_yolo(video_path, output_path)\n",
+    "    video_path = \"../f1-strategy/data/videos/belgium_gp.f399.mp4\"\n",
+    "    output_path = \"../f1-strategy/data/videos/gap_detection_output.mp4\"\n",
+    "    process_video_with_yolo(video_path, output_path)\n",
     "\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     main()"
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,14 +1209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cell 3: Run gap extraction with visualization\n",
     "def main_extract_gaps():\n",
     "    \"\"\"Extract gaps from the video at 10-second intervals and save to CSV\"\"\"\n",
-    "    video_path = \"../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4\"\n",
+    "    video_path = \"../f1-strategy/data/videos/belgium_gp.f399.mp4\"\n",
     "    \n",
     "    # Run extraction with default 10-second interval, showing video\n",
     "    gap_data = extract_gaps_from_video(\n",
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1247,118 +1247,101 @@
      "output_type": "stream",
      "text": [
       "Video FPS: 50, sampling every 500 frames (10 seconds)\n",
-      "Starting gap extraction from ../f1-strategy/data/videos/best_overtakes_2023.mp4.f399.mp4...\n",
+      "Starting gap extraction from ../f1-strategy/data/videos/belgium_gp.f399.mp4...\n",
       "Will sample approximately every 10 seconds\n",
       "Taking sample at frame 1 (timestamp: 0.02s)\n",
-      "Found 0 car gaps at timestamp 0.02s\n",
-      "Skipped forward 10 seconds to frame 532\n",
-      "Taking sample at frame 532 (timestamp: 10.64s)\n",
-      "Skipped forward 10 seconds to frame 1032\n",
-      "Taking sample at frame 1032 (timestamp: 20.64s)\n",
-      "Skipped forward 10 seconds to frame 1532\n",
-      "Taking sample at frame 1532 (timestamp: 30.64s)\n",
-      "Found 1 car gaps at timestamp 30.64s\n",
-      "Skipped forward 10 seconds to frame 2032\n",
-      "Taking sample at frame 2032 (timestamp: 40.64s)\n",
-      "Found 1 car gaps at timestamp 40.64s\n",
-      "Skipped forward 10 seconds to frame 2532\n",
-      "Taking sample at frame 2532 (timestamp: 50.64s)\n",
-      "Found 0 car gaps at timestamp 50.64s\n",
-      "Skipped forward 10 seconds to frame 3032\n",
-      "Taking sample at frame 3032 (timestamp: 60.64s)\n",
-      "Found 0 car gaps at timestamp 60.64s\n",
-      "Skipped forward 10 seconds to frame 3532\n",
-      "Taking sample at frame 3532 (timestamp: 70.64s)\n",
-      "Found 2 car gaps at timestamp 70.64s\n",
-      "Skipped forward 10 seconds to frame 4032\n",
-      "Taking sample at frame 4032 (timestamp: 80.64s)\n",
-      "Found 0 car gaps at timestamp 80.64s\n",
-      "Skipped forward 10 seconds to frame 4532\n",
-      "Taking sample at frame 4532 (timestamp: 90.64s)\n",
-      "Found 1 car gaps at timestamp 90.64s\n",
-      "Skipped forward 10 seconds to frame 5032\n",
-      "Taking sample at frame 5032 (timestamp: 100.64s)\n",
-      "Found 0 car gaps at timestamp 100.64s\n",
-      "Skipped forward 10 seconds to frame 5532\n",
-      "Taking sample at frame 5532 (timestamp: 110.64s)\n",
-      "Skipped forward 10 seconds to frame 6032\n",
-      "Taking sample at frame 6032 (timestamp: 120.64s)\n",
-      "Found 2 car gaps at timestamp 120.64s\n",
-      "Skipped forward 10 seconds to frame 6532\n",
-      "Taking sample at frame 6532 (timestamp: 130.64s)\n",
-      "Skipped forward 10 seconds to frame 7032\n",
-      "Taking sample at frame 7032 (timestamp: 140.64s)\n",
-      "Found 0 car gaps at timestamp 140.64s\n",
-      "Skipped forward 10 seconds to frame 7532\n",
-      "Taking sample at frame 7532 (timestamp: 150.64s)\n",
-      "Found 1 car gaps at timestamp 150.64s\n",
-      "Skipped forward 10 seconds to frame 8032\n",
-      "Taking sample at frame 8032 (timestamp: 160.64s)\n",
-      "Found 0 car gaps at timestamp 160.64s\n",
-      "Skipped forward 10 seconds to frame 8532\n",
-      "Taking sample at frame 8532 (timestamp: 170.64s)\n",
-      "Found 0 car gaps at timestamp 170.64s\n",
-      "Skipped forward 10 seconds to frame 9032\n",
-      "Taking sample at frame 9032 (timestamp: 180.64s)\n",
-      "Found 1 car gaps at timestamp 180.64s\n",
-      "Skipped forward 10 seconds to frame 9532\n",
-      "Taking sample at frame 9532 (timestamp: 190.64s)\n",
-      "Found 0 car gaps at timestamp 190.64s\n",
-      "Skipped forward 10 seconds to frame 10032\n",
-      "Taking sample at frame 10032 (timestamp: 200.64s)\n",
-      "Found 1 car gaps at timestamp 200.64s\n",
-      "Skipped forward 10 seconds to frame 10532\n",
-      "Taking sample at frame 10532 (timestamp: 210.64s)\n",
-      "Found 0 car gaps at timestamp 210.64s\n",
-      "Taking sample at frame 11032 (timestamp: 220.64s)\n",
-      "Found 0 car gaps at timestamp 220.64s\n",
-      "Taking sample at frame 11532 (timestamp: 230.64s)\n",
-      "Found 0 car gaps at timestamp 230.64s\n",
-      "Taking sample at frame 12032 (timestamp: 240.64s)\n",
-      "Found 2 car gaps at timestamp 240.64s\n",
-      "Skipped forward 10 seconds to frame 12643\n",
-      "Taking sample at frame 12643 (timestamp: 252.86s)\n",
-      "Found 0 car gaps at timestamp 252.86s\n",
-      "Skipped forward 10 seconds to frame 13149\n",
-      "Taking sample at frame 13149 (timestamp: 262.98s)\n",
-      "Found 0 car gaps at timestamp 262.98s\n",
-      "Skipped forward 10 seconds to frame 13655\n",
-      "Taking sample at frame 13655 (timestamp: 273.10s)\n",
-      "Gap data saved to ../f1-strategy/data/gaps/gap_data_best_overtakes_2023_20250410_121758.csv\n",
-      "Total of 12 gap measurements collected\n",
+      "Found 2 car gaps at timestamp 0.02s\n",
+      "Detection threshold increased to 0.30\n",
+      "Detection threshold increased to 0.35\n",
+      "Detection threshold increased to 0.40\n",
+      "Detection threshold increased to 0.45\n",
+      "Detection threshold increased to 0.50\n",
+      "Detection threshold increased to 0.55\n",
+      "Skipped forward 10 seconds to frame 686\n",
+      "Taking sample at frame 686 (timestamp: 13.72s)\n",
+      "Found 0 car gaps at timestamp 13.72s\n",
+      "Skipped forward 10 seconds to frame 1186\n",
+      "Taking sample at frame 1186 (timestamp: 23.72s)\n",
+      "Found 0 car gaps at timestamp 23.72s\n",
+      "Skipped forward 10 seconds to frame 1686\n",
+      "Taking sample at frame 1686 (timestamp: 33.72s)\n",
+      "Skipped forward 10 seconds to frame 2186\n",
+      "Taking sample at frame 2186 (timestamp: 43.72s)\n",
+      "Found 1 car gaps at timestamp 43.72s\n",
+      "Skipped forward 10 seconds to frame 2686\n",
+      "Taking sample at frame 2686 (timestamp: 53.72s)\n",
+      "Found 1 car gaps at timestamp 53.72s\n",
+      "Skipped forward 10 seconds to frame 3186\n",
+      "Taking sample at frame 3186 (timestamp: 63.72s)\n",
+      "Skipped forward 10 seconds to frame 3686\n",
+      "Taking sample at frame 3686 (timestamp: 73.72s)\n",
+      "Found 3 car gaps at timestamp 73.72s\n",
+      "Skipped forward 10 seconds to frame 4186\n",
+      "Taking sample at frame 4186 (timestamp: 83.72s)\n",
+      "Found 1 car gaps at timestamp 83.72s\n",
+      "Skipped forward 10 seconds to frame 4686\n",
+      "Taking sample at frame 4686 (timestamp: 93.72s)\n",
+      "Found 1 car gaps at timestamp 93.72s\n",
+      "Skipped forward 10 seconds to frame 5233\n",
+      "Taking sample at frame 5233 (timestamp: 104.66s)\n",
+      "Found 2 car gaps at timestamp 104.66s\n",
+      "Skipped forward 10 seconds to frame 5733\n",
+      "Taking sample at frame 5733 (timestamp: 114.66s)\n",
+      "Skipped forward 10 seconds to frame 6233\n",
+      "Taking sample at frame 6233 (timestamp: 124.66s)\n",
+      "Found 0 car gaps at timestamp 124.66s\n",
+      "Skipped forward 10 seconds to frame 6733\n",
+      "Taking sample at frame 6733 (timestamp: 134.66s)\n",
+      "Found 1 car gaps at timestamp 134.66s\n",
+      "Taking sample at frame 7233 (timestamp: 144.66s)\n",
+      "Found 0 car gaps at timestamp 144.66s\n",
+      "Skipped forward 10 seconds to frame 7821\n",
+      "Taking sample at frame 7821 (timestamp: 156.42s)\n",
+      "Skipped forward 10 seconds to frame 8321\n",
+      "Taking sample at frame 8321 (timestamp: 166.42s)\n",
+      "Found 1 car gaps at timestamp 166.42s\n",
+      "Skipped forward 10 seconds to frame 8821\n",
+      "Taking sample at frame 8821 (timestamp: 176.42s)\n",
+      "Detection threshold increased to 0.60\n",
+      "Detection threshold increased to 0.65\n",
+      "Detection threshold increased to 0.70\n",
+      "Taking sample at frame 9321 (timestamp: 186.42s)\n",
+      "Found 1 car gaps at timestamp 186.42s\n",
+      "Gap data saved to ../f1-strategy/data/gaps/gap_data_belgium_gp_20250411_114225.csv\n",
+      "Total of 14 gap measurements collected\n",
       "\n",
       "Sample gap data:\n",
-      "   frame  timestamp  car1_id  car2_id     car1_team car2_team  \\\n",
-      "0   1532      30.64       10       11      Mercedes    F1 Car   \n",
-      "1   2032      40.64       12       13  Aston Martin    F1 Car   \n",
-      "2   3532      70.64       16       18      Williams    F1 Car   \n",
-      "3   3532      70.64       18       17        F1 Car      Haas   \n",
-      "4   4532      90.64       20       21        F1 Car   Mclaren   \n",
+      "   frame  timestamp  car1_id  car2_id car1_team car2_team  distance_meters  \\\n",
+      "0      1       0.02        2        0    F1 Car    F1 Car        17.364673   \n",
+      "1      1       0.02        0        1    F1 Car    F1 Car        13.423841   \n",
+      "2   2186      43.72       36       37    F1 Car    F1 Car        40.675699   \n",
+      "3   2686      53.72       38       39   Ferarri    F1 Car         5.556660   \n",
+      "4   3686      73.72       42       41    F1 Car    F1 Car        34.803207   \n",
       "\n",
-      "   distance_meters  gap_seconds  \n",
-      "0         2.014841     0.024179  \n",
-      "1         3.432174     0.041188  \n",
-      "2         4.366518     0.052400  \n",
-      "3        13.021583     0.156265  \n",
-      "4         7.130490     0.085569  \n",
+      "   gap_seconds  \n",
+      "0     0.208384  \n",
+      "1     0.161093  \n",
+      "2     0.488128  \n",
+      "3     0.066683  \n",
+      "4     0.417655  \n",
       "\n",
       "Gap statistics (seconds):\n",
-      "count    12.000000\n",
-      "mean      0.070155\n",
-      "std       0.036108\n",
-      "min       0.024179\n",
-      "25%       0.042145\n",
-      "50%       0.068407\n",
-      "75%       0.087132\n",
-      "max       0.156265\n",
+      "count    14.000000\n",
+      "mean      0.158485\n",
+      "std       0.133139\n",
+      "min       0.036265\n",
+      "25%       0.084572\n",
+      "50%       0.110610\n",
+      "75%       0.158266\n",
+      "max       0.488128\n",
       "Name: gap_seconds, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "# Cell 4: Execute the extraction\n",
-    "if __name__ == \"__main__\":\n",
-    "    gap_data = main_extract_gaps()"
+    "# # Cell 4: Execute the extraction\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     gap_data = main_extract_gaps()"
    ]
   },
   {
